# Presentation

./: CMakeLists.txt  LICENSE  README.md
CMake/: FindSDL2.cmake
Lib/: Base.h  Utils.h  Vulkan.h
Lib/Base/: Alias.h  Memory.cpp  Memory.h
Lib/MGLV/: Enums.h  Functions.cpp  Functions.h  Mappings.cpp
Lib/MGLV/Objects/: Buffer.cpp  Context.cpp  Objects.hpp  Pipeline.cpp  Shader.cpp
Lib/UI/: Application.cpp  Application.h  Common.h  Event.cpp  Event.h  Exceptions.cpp  Exceptions.h  Fundamentals.cpp  Fundamentals.h  Window.cpp  Window.h
Lib/UI/Fundamentals/: Element.cpp  Element.h  Events.cpp  Events.h  Interactable.cpp  Interactable.h  Layoutable.cpp  Layoutable.h  Renderable.cpp  Renderable.h  Transform.cpp  Transform.h
Lib/Utils/: FileLoader.h
Lib/Vulkan/: Common.h  Fence.h  Framebuffer.h  LogicalDevice.h  Semaphore.h  Shader.h
Test/: libtest.cpp
